<resources>
    <string name="app_name">周转箱台式</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="error_system">服务器出错</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或者密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="error_network_unreachable">网络连接不可用，请检查网络设置!</string>
    <string name="rfid_mgs_error_config">设备配置错误</string>
    <string name="yid_msg_scan_fail">Scan failure</string>
    <string name="default_loading">loading</string>
    <string name="login">登录</string>
    <string name="error_configuration">请先配置</string>
    <string name="error_security">该串口号没有读写权限</string>
    <string name="error_unknown">打开失败，未知错误</string>
    <string-array name="options_array">
        <item>主页</item>
        <item>租赁</item>
        <item>退还</item>
        <item>报废登记</item>
        <item>扫码查询</item>
        <item>设置</item>
        <item>退出</item>
    </string-array>
    <string name="drawer_image_desc">Icon for the Navigation drawer item</string>
    <string name="drawer_item_text">Drawer Item</string>
    <string name="settting_inform">通讯设置</string>
    <string name="settting_item">其它设置</string>
    <string name="settting_user">账号设置</string>
    <string name="setting_ble">蓝牙设置</string>
    <string name="settting_help">功率设置</string>
    <string name="settting_inform_ip">IP地址：</string>
    <string name="settting_inform_port">端口号：</string>
    <string name="save">保存</string>
    <string name="setting_user_name">用户名：</string>
    <string name="setting_user_pass">原密码：</string>
    <string name="setting_user_pass1">新密码：</string>
    <string name="setting_user_pass2">密码确认：</string>
    <string name="lease_num">租赁卡编号：</string>
    <string name="lease_name">租赁人姓名：</string>
    <string name="lease_next">扫描货物</string>
    <string name="lease_stop">停止扫描</string>
    <string name="lease_scan">扫描租赁卡</string>
    <string name="lease_back">扫描退换卡</string>
    <string name="lease_money">合计：</string>
    <string name="lease_commit">出库提交</string>
    <string name="lease_print">打印</string>
    <string name="frag_scan">点击进行租赁</string>
    <string name="frag_back">点击进行退还</string>
    <string name="return_next">下一步</string>
    <string name="return_clear">清除</string>
    <string name="return_sure">确定</string>
    <string name="return_num">退还卡编号：</string>
    <string name="return_name">退还人姓名：</string>
    <string name="return_money">破损总扣费：</string>
    <string name="return_commit">入库提交</string>
    <string name="pick_commit">报废提交</string>
    <string name="find_scan">扫码查询</string>
    <string name="pick_scan">扫描货物</string>
    <string name="qing_scan">请扫描租赁卡</string>
    <string name="qing_sca1n">请扫描退还卡</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="connect_tcp_ip">"TCP/IP"</string>
    <string name="connect_bluetooth">"Bluetooth"</string>
    <string name="connect_tcp_ip_address">"IP:"</string>
    <string name="connect_tcp_ip_port">"Port:"</string>
    <string name="language">English</string>
    <string name="version">版本</string>
    <string name="clear_log">清除操作记录</string>
    <string name="failure_reason">失败，失败原因：</string>
    <string name="set_ant_success">设置工作天线成功,当前工作天线: 天线</string>
    <string name="no_match_label">无匹配标签</string>
    <string name="antenna">天线</string>
    <string name="write_success_l">成功写入</string>
    <string name="byte_l">字节</string>
    <string name="lock_success">成功锁定</string>
    <string name="already_lock">已是锁定状态</string>
    <string name="can_not_lock">无法锁定</string>
    <string name="command_succeeded">命令成功完成</string>
    <string name="command_failed">命令执行失败</string>
    <string name="cup_seset_error">CPU 复位错误</string>
    <string name="cw_on_error">打开CW 错误</string>
    <string name="antenna_miss_error">天线未连接</string>
    <string name="write_flash_error">写Flash 错误</string>
    <string name="Read_flash_error">读Flash 错误</string>
    <string name="set_output_power_error">设置发射功率错误</string>
    <string name="tag_inventory_error">盘存标签错误</string>
    <string name="tag_read_error">读标签错误</string>
    <string name="tag_write_error">写标签错误</string>
    <string name="tag_lock_error">锁定标签错误</string>
    <string name="tag_kill_error">灭活标签错误</string>
    <string name="no_tag_error">无可操作标签错误</string>
    <string name="inventory_ok_but_access_fail">T成功盘存但访问失败</string>
    <string name="buffer_is_empty_error">缓存为空</string>
    <string name="access_ro_password_error">访问标签错误或访问密码错误</string>
    <string name="parameter_invalid">无效的参数</string>
    <string name="parameter_invalid_wordcnt_too_long">wordCnt 参数超过规定长度</string>
    <string name="parameter_invaild_membank_out_of_range">MemBank 参数超出范围</string>
    <string name="parameter_invaild_lock_region_out_of_range">Lock 数据区参数超出范围</string>
    <string name="parameter_invaild_lock_action_out_of_range">LockType 参数超出范围</string>
    <string name="parameter_reader_address_invaild">读写器地址无效</string>
    <string name="parameter_invaild_antenna_id_out_of_range">Antenna_id 超出范围</string>
    <string name="parameter_invaild_output_power_out_of_range">输出功率参数超出范围</string>
    <string name="parameter_invaild_frequency_region_out_of_range">射频规范区域参数超出范围</string>
    <string name="parameter_invaild_baudrate_out_of_range">波特率参数超出范围</string>
    <string name="parameter_beeper_mode_out_of_range">蜂鸣器设置参数超出范围</string>
    <string name="parameter_epc_match_len_too_long">EPC 匹配长度越界</string>
    <string name="parameter_epc_match_len_error">EPC 匹配长度错误</string>
    <string name="parameter_invaild_epc_match_mode">EPC 匹配参数超出范围</string>
    <string name="parameter_invaild_frequency_range">频率范围设置参数错误</string>
    <string name="fail_to_get_rn_from_tag">无法接收标签的RN16</string>
    <string name="parameter_invaild_drm_mode">DRM 设置参数错误</string>
    <string name="pll_lock_fail">PLL 不能锁定</string>
    <string name="rf_chip_fail_to_response">射频芯片无响应</string>
    <string name="fail_to_chieve_desired_output_power">输出达不到指定的输出功率</string>
    <string name="copyright_authentication_fail">版权认证未通过</string>
    <string name="spectrum_regulation_error">频谱规范设置错误</string>
    <string name="output_power_too_low">输出功率过低</string>
    <string name="unknown_error">未知错误</string>
    <string name="inventory">盘存标签</string>
    <string name="reset">复位读写器</string>
    <string name="set_uart_baudrate">设置串口通讯波特率</string>
    <string name="get_firmware_version">读取读写器固件版本</string>
    <string name="set_reader_add">设置读写器地址</string>
    <string name="set_work_ant">设置读写器工作天线</string>
    <string name="get_work_ant">查询当前天线工作天线</string>
    <string name="set_output_power">设置读写器射频输出功率</string>
    <string name="get_output_power">查询读写器当前输出功率</string>
    <string name="set_freq_reg">设置读写器工作频率范围</string>
    <string name="get_freq_reg">查询读写器工作频率范围</string>
    <string name="set_beeper_mode">设置蜂鸣器状态</string>
    <string name="get_rader_temp">查询当前设备的工作温度</string>
    <string name="read_gpio_value">读取GPIO电平</string>
    <string name="write_gpio_value">设置GPIO电平</string>
    <string name="set_ant_conn">设置天线连接检测器状态</string>
    <string name="get_ant_conn">读取天线连接检测器状态</string>
    <string name="set_temp_output_power">置读写器临时射频输出功率</string>
    <string name="set_reader_identi">设置读写器识别码</string>
    <string name="get_reader_identi">读取读写器识别码</string>
    <string name="set_rf_link_pro">设置射频链路的通讯速率</string>
    <string name="get_rf_link_pro">读取射频链路的通讯速率</string>
    <string name="get_rf_port">测量天线端口的回波损耗</string>
    <string name="read_tag_c">读标签</string>
    <string name="write_tag_c">写标签</string>
    <string name="lock_tag_c">锁定标签</string>
    <string name="kill_tag_c">灭活标签</string>
    <string name="set_access_epc_match">匹配ACCESS操作的EPC号</string>
    <string name="get_access_epc_match">查询匹配的EPC状态</string>
    <string name="real_time_inventory">盘存标签(实时上传标签数据)</string>
    <string name="fast_switch_ant_inv">快速轮询多个天线盘存标签</string>
    <string name="customized_session">自定义session和target盘存</string>
    <string name="set_impinj">设置Monza标签快速读TID(不保存)</string>
    <string name="set_and_save_impinj">设置Monza标签快速读TID(保存)</string>
    <string name="get_imping">查询当前的快速TID设置</string>
    <string name="iso_B_inv">盘存18000-6B标签</string>
    <string name="iso_B_read">读18000-6B标签</string>
    <string name="iso_b_write_tag">写18000-6B标签</string>
    <string name="iso_b_lock_tag">锁定18000-6B标签</string>
    <string name="iso_b_query_lock_tag">查询18000-6B标签</string>
    <string name="get_inventory_buff">提取标签数据保留缓存备份</string>
    <string name="get_ant_reset_inv">提取标签数据并删除缓存</string>
    <string name="get_inventory_buffer_tag_count">查询缓存中已读标签个数</string>
    <string name="reset_inventory_buff">清空标签数据缓存</string>
    <string name="unknown_operate">未知操作</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="goon">继续</string>
    <string name="switchwifi">切换</string>
    <string name="alert_diag_title">提示</string>
    <string name="are_you_sure_to_exit">确认要退出吗？</string>
    <string name="music_is_play_must_exit">盘存之前必须停止音乐播放！</string>
    <string name="file_name">文件:</string>
    <string name="file_dir">目录:</string>
    <string name="item_1">6C 标签操作</string>
    <string name="item_2">6B 标签操作</string>
    <string name="item_3">高级设置</string>
    <string name="item_add1">导出Excel</string>
    <string name="item_4">退出</string>
    <string name="tab_title1">盘存标签</string>
    <string name="tab_title2">存取标签</string>
    <string name="connect_rs232">"串口连接"</string>
    <string name="connect">"立即连接"</string>
    <string name="connect_otg">"Connect OTG"</string>
    <string name="com_port">串口号:</string>
    <string name="baud_rate">波特率:</string>
    <string name="com_port_usb">"USB串口(FT312D)"</string>
    <string name="rs232_error">"串口参数设置错误"</string>
    <string name="scanning">正在搜寻设备</string>
    <string name="select_device">选择你要连接的设备</string>
    <string name="none_paired">没有配对设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">配对的设备</string>
    <string name="title_other_devices">其它可用的设备</string>
    <string name="button_scan">搜寻设备</string>
    <string name="back_to_main">返回</string>
    <string name="open_caption">操作记录(点击展开)</string>
    <string name="close_caption">操作记录(点击隐藏)</string>
    <string name="setting_reset">复位读写器</string>
    <string name="setting_base">基本参数设置</string>
    <string name="setting_reader_address">读写器RS-485地址(HEX)</string>
    <string name="setting_identifier">读写器识别标识(12字节)</string>
    <string name="setting_firmware_version">固件版本</string>
    <string name="setting_temperature">工作温度</string>
    <string name="setting_gpio">读写GPIO</string>
    <string name="setting_set_gpio">写GPIO(GPIO3,GPIO4):</string>
    <string name="setting_get_gpio">读GPIO(GPIO1,GPIO2):</string>
    <string name="setting_gpio_1">高</string>
    <string name="setting_gpio_0">低</string>
    <string name="setting_beeper">蜂鸣器状态</string>
    <string name="beeper_quiet">安静</string>
    <string name="beeper_all">存盘后鸣响</string>
    <string name="beeper_one">每读到一张标签鸣响(影响多标签识别，仅供测试)</string>
    <string name="setting_rf">射频参数设置</string>
    <string name="setting_drm_status">DRM状态</string>
    <string name="setting_out_power">射频输出功率</string>
    <string name="dBm">dBm</string>
    <string name="setting_antenna">切换当前工作天线</string>
    <string name="antenna_port">天线端口:</string>
</resources>