<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lease_num"/>

        <TextView
            android:id="@+id/tv_tid"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lease_name"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="小王"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_scan"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_blue_500"
        android:textColor="@color/white"
        android:text="@string/lease_next"/>

    <LinearLayout
        android:id="@+id/lin_lease"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/md_blue_500"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="规格"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="数量"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="押金"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_lease"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="200dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/lease_money"
                />

            <TextView
                android:id="@+id/tv_sum"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="累计租赁：0个  应付金额：0元"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_commit"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/md_blue_500"
                android:textColor="@color/white"
                android:text="@string/lease_commit"/>

            <Button
                android:id="@+id/btn_print"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/md_blue_500"
                android:textColor="@color/white"
                android:text="@string/lease_print"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>